crates/oxc_css/tests/error/scss/qualified-rule/missing-block.snap
---
source: crates/oxc_css/tests/error.rs
---
error: expect token `{`, but found `<eof>`
  ┌─ missing-block.scss:2:1
  │
2 │ 
  │ ^


